Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextText.quorum
text t = cast(text, "text")
output t