Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignObjectText.quorum
Object o = cast(Object, "text")